--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
-{
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/(.*)", "status": 404, "dest": "/index.html" }
-    ]
+
+  {
+    "rewrites": [{ "source": "/(.*)", "destination": "/dest/index.html" }]
   }
