--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 
   {
-    "rewrites": [{ "source": "/(.*)", "destination": "/dest/index.html" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
   }
